# Gen_ai_langchain

./: .dockerignore  Dockerfile  README.md  app.py  architecture.md  docker-compose.yml  ingest.py  langchainIngest.py  langchainquery.py  main.py  pyproject.toml  query.py  requirements.txt  utils.py
data/: sample.txt
embeddings/: chunks.pkl  index.faiss
lc_vectorstore/: index.faiss  index.pkl
